--- a/components/reusableComponents/SplashNavbar/SplashNavbar.module.css
+++ b/components/reusableComponents/SplashNavbar/SplashNavbar.module.css
@@ -6,42 +6,34 @@
   left: 0;
   top: 0;
   width: 100%;
-  padding-bottom: 12.5em;
   background-color: var(--secondary-color);
   box-shadow: 0 0 0.375em var(--primary-shade);
+}
+
+.relativeContainer {
+  position: relative;
+  width: 100%;
+  max-width: var(--doc-width);
+  margin-inline: auto;
+  padding-bottom: 12.5em;
   transition: all linear 0.3s;
 }
 
 .splashNavbar {
   position: relative;
   width: 100%;
-  max-width: var(--doc-width);
   min-height: 6.25em;
   height: 50vw;
   max-height: 25em;
-  margin-inline: auto;
   transition: all linear 0.3s;
 }
 
-.logoLinkContainer {
+.splashNavbar>.logoLinkContainer {
   z-index: 102;
   position: absolute;
   left: 50%;
   top: 0;
   transform: translateX(-50%);
-  height: 100%;
-  max-width: 100%;
-  aspect-ratio: 2/1;
-  padding: 0.625em 1.25em;
-  transition: all linear 0.3s;
-}
-
-.imageWrapper {
-  height: 100%;
-}
-
-.imageWrapper>img {
-  object-fit: contain;
 }
 
 .splashNavbarSlogan {
@@ -51,6 +43,7 @@
   bottom: 6.25em;
   height: 6.25em;
   max-width: var(--doc-width);
+  padding-top: 0.75em;
   display: flex;
   align-items: center;
   opacity: 1;
@@ -75,13 +68,12 @@
 
 @media (max-width: 59.375rem) {
 
-  .splashNavbarContainer {
+  .relativeContainer {
     padding-bottom: 6.25em;
   }
 
   .splashNavbarSlogan {
     bottom: 0;
-    padding-top: 0.75em;
   }
 
   .splashNavbarLinks {
